# libak

./: .gitignore  CMakeLists.txt  Makefile  READMD.md
example/: CMakeLists.txt  hello.cpp
include/: buffer.h  channel.h  channel_generator.h  channel_generator_tcp.h  client.h  conn.h  conn_generator.h  conn_generator_tcp.h  eventloop.h  libak.h  poller.h  poller_epoll.h  proto.h  proto_center.h  transport.h
src/: acceptor.cpp  acceptor.h  buffer.h  channel.cpp  channel.h  channelg.h  client.cpp  client.h  conn.cpp  conn.h  conn_generator.h  conn_generator_tcp.cpp  conn_generator_tcp.h  endpoint.h  eventloop.cpp  eventloop.h  eventloop_thread.h  eventloop_thread_pool.h  libak.cpp  libak.h  log.h  main.cpp  msg_en_decoder.h  msg_queue.h  net_addr.h  poller.h  proto.h  proto_center.cpp  server.h  socket.h  tcp_conn.cpp  tcp_conn.h  tcp_server.cpp  tcp_server.h  transport.cpp  transport.h  transport_pool.cpp  transport_pool.h  transport_tcp.cpp  transport_tcp.h  (+1 more)
src/channelg/: channelg_tcp.cpp  channelg_tcp.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/common/: endian.h  noncopyable.h
src/poller/: poller_epoll.cpp  poller_epoll.h
